jEdit 5.1 version history
       (changes since jEdit 5.0.0)
:encoding=UTF-8:

{{{ Version 5.1pre2

Thanks to Björn "Vampire" Kautler for contributing to this release.

{{{ Bug Fixes

 - The column titles were missing in shortcuts option pane
   (#3614404 Matthieu Casanova)

}}}
{{{ Miscellaneous

 - Added a new column "ActionSet" in Shortcuts option pane to know
   to which actionSet an action belong (feature #3614386 Matthieu Casanova)

}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

{{{ Version 5.1pre1

Thanks to Björn "Vampire" Kautler, Jarek Czekalski, Thomas Meyer,
Matthieu Casanova, cnvince, Alan Ezust, Malathi, Vladimir Avdonin, Eric Le Lay,
Darien Brown, Steve snarum-micron, EdorFaus, Brian Clapper, Uwe Stöhr,
Marc Häfner, stone1343, Richard The, Dale Anson, Benjamin Gmurczyk,
Makarius, Marco Hunsicker, and Maik Nijhuis for contributing to this release.

{{{ Bug fixes

- The contextInsensitive flag of the edit mode was not used at the first use
  of the edit mode (Matthieu Casanova)

- Fix mode loading for temporary buffers (patch #3609469 Thomas Meyer)

- Fix #3598661 - Don't allow negative values in the general option pane.
  (Thomas Meyer)

- Fix #3596215 - NPE from docking layout save/loads when started with
  -nosettings. (Alan Ezust)

- Fix #3597101, #3596600 - Bad error handling when an invalid path is entered
  into the VFS Browser inputs. (Patch# 3602318 Benjamin Gmurczyk)

- Bug no. #3590540 revealed a performance problem in the ChunkCache, because
  every scroll action resulted in a tokenization of the really long line, which
  takes a considerable time and makes jEdit unusable.
  Fix is to always keep all Chunks of the tokenization process and use it as an
  buffer in the ChunkCache class.
  Tokenization of the physical line still happens for every insertion or
  deletion of the Buffer. Tokenization also happens when the cursor enters the
  physical line, as only the Chunks from the current physical line are keeped
  in the ChunkCache.