@@ -1477,16 +1477,19 @@ public class TextAreaPainter extends JComponent implements TabExpander
 
 			if(textArea.isOverwriteEnabled())
 			{
-				gfx.drawLine(caretX, y + lineHeight - 1,
-					     caretX + textArea.charWidth,
-					     y + lineHeight - 1);
+				if (thickCaret) 
+					gfx.fillRect(caretX, y + lineHeight - 4, textArea.charWidth, 3);
+				
+				else  gfx.drawLine(caretX, y + lineHeight - 1, 
+					caretX + textArea.charWidth, y + lineHeight - 1);
 			}
 			else if(blockCaret)
-				gfx.drawRect(caretX, y + charOffset, textArea.charWidth - 1, charHeight - 1);
+				gfx.drawRect(caretX, y + charOffset, 
+					textArea.charWidth - 1, charHeight - 1);
 			else
 			{
-				if (thickCaret)
-					gfx.drawRect(caretX, y + charOffset, 1, charHeight - 1);
+				if (thickCaret) 
+					gfx.fillRect(caretX, y + charOffset, 3, charHeight - 1);
 				else
 					gfx.drawLine(caretX, y + charOffset, caretX, 
 						     y + charOffset + charHeight - 1);
