@@ -14,6 +14,9 @@ Thanks to Björn "Vampire" Kautler for contributing to this release.
 }}}
 {{{ Miscellaneous
 
+ - Made TextArea thick caret thicker, and also thick when in overwrite mode. 
+    (#3614784 Alan Ezust)
+
  - Added a new column "ActionSet" in Shortcuts option pane to know
    to which actionSet an action belong (feature #3614386 Matthieu Casanova)
 
